<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@android:color/white"
    android:layout_width="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:layout_height="match_parent">
    <RelativeLayout
        android:orientation="horizontal"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/black"
        app:popupTheme="@style/AppTheme.PopupOverlay" >
        <ImageView
            android:id="@+id/ic_back"
            android:layout_width="50dp"
            android:padding="5dp"
            android:src="@drawable/ic_back"
            android:layout_height="match_parent"></ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:layout_toRightOf="@+id/navDrawer"
            android:gravity="center"
            android:text="Edit Student"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"></TextView>
    </RelativeLayout>
    <ImageView
        android:id="@+id/profile"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:backgroundTint="@color/white"
        android:layout_centerHorizontal="true"

        android:padding="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:scaleType="centerCrop"
        android:src="@drawable/admin"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:id="@+id/studentidError"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/studentid"
                    android:drawablePadding="7dp"
                    android:drawableLeft="@drawable/ic_student_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="Student Id"
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    android:paddingStart="5dp"
                    android:singleLine="true"
                    android:paddingLeft="5dp" />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:id="@+id/admissionDateErrorError"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/admissionDate"
                    android:drawablePadding="7dp"
                    android:drawableLeft="@drawable/ic_admission_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="Admission Date"
                    android:focusable="false"
                    android:inputType="none"
                    android:maxLines="1"
                    android:paddingStart="5dp"
                    android:singleLine="true"
                    android:paddingLeft="5dp" />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:id="@+id/fullNameError"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/fullName"
                    android:drawablePadding="7dp"
                    android:drawableLeft="@drawable/ic_full_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/full_name"
                    android:inputType="textNoSuggestions"
                    android:maxLines="1"
                    android:paddingStart="5dp"
                    android:singleLine="true"
                    android:paddingLeft="5dp" />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:id="@+id/gradeError"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/grade"
                    android:drawablePadding="7dp"
                    android:drawableLeft="@drawable/ic_grade"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="Grade"
                    android:inputType="textNoSuggestions"
                    android:maxLines="1"
                    android:paddingStart="5dp"
                    android:singleLine="true"
                    android:paddingLeft="5dp" />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:id="@+id/mobileNumberError"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/mobileNumber"
                    android:drawablePadding="7dp"
                    android:drawableLeft="@drawable/ic_mobile_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/mobile_number"
                    android:inputType="numberDecimal"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:paddingStart="5dp"
                    android:singleLine="true"
                    android:paddingLeft="5dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:id="@+id/addressError"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/address"
                    android:drawablePadding="7dp"
                    android:drawableLeft="@drawable/ic_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/address_optional"
                    android:inputType="textNoSuggestions"
                    android:maxLines="1"
                    android:paddingStart="5dp"
                    android:singleLine="true"
                    android:paddingLeft="5dp" />

            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">
                    <Button
                        android:id="@+id/btnUpdate"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_margin="20dp"
                        android:background="#1F86D8"
                        android:text="@string/update"
                        android:textColor="@android:color/white"
                        android:textSize="20sp"/>

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>